1 i 2 zadanie zrobione